yaplParser.py
# Generated from yapl.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class yaplParser ( Parser ):

    grammarFileName = "yapl.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{'", "'}'", "'('", "')'", "';'", "','", 
                     "'='", "'+'", "'-'", "'*'", "'/'", "'=='", "'<'", "'true'", 
                     "'.'", "'false'", "'class'", "'inherits'", "'self'", 
                     "'SELF_TYPE'", "'else'", "'fi'", "'if'", "'while'", 
                     "'new'", "'isvoid'", "'not'", "'return'", "'int'", 
                     "'string'" ]

    symbolicNames = [ "<INVALID>", "LBRACE", "RBRACE", "LPAREN", "RPAREN", 
                      "SEMI", "COMMA", "EQUALS", "PLUS", "MINUS", "MULT", 
                      "DIV", "EQ", "LT", "TRUE", "DOT", "FALSE", "CLASS", 
                      "INHERITS", "SELF", "SELF_TYPE", "ELSE", "FI", "IF", 
                      "WHILE", "NEW", "ISVOID", "NOT", "RETURN", "INT", 
                      "STRING_TYPE", "ID", "TYPE_ID", "INTEGER", "STRING", 
                      "COMMENT", "WS" ]

    RULE_program = 0
    RULE_classDeclaration = 1
    RULE_classBody = 2
    RULE_attributeDeclaration = 3
    RULE_type = 4
    RULE_methodDeclaration = 5
    RULE_parameterList = 6
    RULE_parameter = 7
    RULE_block = 8
    RULE_statement = 9
    RULE_assignmentStatement = 10
    RULE_variableDeclaration = 11
    RULE_ifStatement = 12
    RULE_whileStatement = 13
    RULE_methodCallStatement = 14
    RULE_returnStatement = 15
    RULE_expressionList = 16
    RULE_expression = 17

    ruleNames =  [ "program", "classDeclaration", "classBody", "attributeDeclaration", 
                   "type", "methodDeclaration", "parameterList", "parameter", 
                   "block", "statement", "assignmentStatement", "variableDeclaration", 
                   "ifStatement", "whileStatement", "methodCallStatement", 
                   "returnStatement", "expressionList", "expression" ]

    EOF = Token.EOF
    LBRACE=1
    RBRACE=2
    LPAREN=3
    RPAREN=4
    SEMI=5
    COMMA=6
    EQUALS=7
    PLUS=8
    MINUS=9
    MULT=10
    DIV=11
    EQ=12
    LT=13
    TRUE=14
    DOT=15
    FALSE=16
    CLASS=17
    INHERITS=18
    SELF=19
    SELF_TYPE=20
    ELSE=21
    FI=22
    IF=23
    WHILE=24
    NEW=25
    ISVOID=26
    NOT=27
    RETURN=28
    INT=29
    STRING_TYPE=30
    ID=31
    TYPE_ID=32
    INTEGER=33
    STRING=34
    COMMENT=35
    WS=36

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(yaplParser.EOF, 0)

        def classDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(yaplParser.ClassDeclarationContext)
            else:
                return self.getTypedRuleContext(yaplParser.ClassDeclarationContext,i)


        def getRuleIndex(self):
            return yaplParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = yaplParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==17:
                self.state = 36
                self.classDeclaration()
                self.state = 41
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 42
            self.match(yaplParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(yaplParser.CLASS, 0)

        def TYPE_ID(self, i:int=None):
            if i is None:
                return self.getTokens(yaplParser.TYPE_ID)
            else:
                return self.getToken(yaplParser.TYPE_ID, i)

        def LBRACE(self):
            return self.getToken(yaplParser.LBRACE, 0)

        def classBody(self):
            return self.getTypedRuleContext(yaplParser.ClassBodyContext,0)


        def RBRACE(self):
            return self.getToken(yaplParser.RBRACE, 0)

        def INHERITS(self):
            return self.getToken(yaplParser.INHERITS, 0)

        def getRuleIndex(self):
            return yaplParser.RULE_classDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDeclaration" ):
                listener.enterClassDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDeclaration" ):
                listener.exitClassDeclaration(self)




    def classDeclaration(self):

        localctx = yaplParser.ClassDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_classDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.match(yaplParser.CLASS)
            self.state = 45
            self.match(yaplParser.TYPE_ID)
            self.state = 48
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==18:
                self.state = 46
                self.match(yaplParser.INHERITS)
                self.state = 47
                self.match(yaplParser.TYPE_ID)


            self.state = 50
            self.match(yaplParser.LBRACE)
            self.state = 51
            self.classBody()
            self.state = 52
            self.match(yaplParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attributeDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(yaplParser.AttributeDeclarationContext)
            else:
                return self.getTypedRuleContext(yaplParser.AttributeDeclarationContext,i)


        def methodDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(yaplParser.MethodDeclarationContext)
            else:
                return self.getTypedRuleContext(yaplParser.MethodDeclarationContext,i)


        def getRuleIndex(self):
            return yaplParser.RULE_classBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassBody" ):
                listener.enterClassBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassBody" ):
                listener.exitClassBody(self)




    def classBody(self):

        localctx = yaplParser.ClassBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_classBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 5905580032) != 0):
                self.state = 56
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                if la_ == 1:
                    self.state = 54
                    self.attributeDeclaration()
                    pass

                elif la_ == 2:
                    self.state = 55
                    self.methodDeclaration()
                    pass


                self.state = 60
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributeDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(yaplParser.TypeContext,0)


        def ID(self):
            return self.getToken(yaplParser.ID, 0)

        def SEMI(self):
            return self.getToken(yaplParser.SEMI, 0)

        def getRuleIndex(self):
            return yaplParser.RULE_attributeDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttributeDeclaration" ):
                listener.enterAttributeDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttributeDeclaration" ):
                listener.exitAttributeDeclaration(self)




    def attributeDeclaration(self):

        localctx = yaplParser.AttributeDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_attributeDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.type_()
            self.state = 62
            self.match(yaplParser.ID)
            self.state = 63
            self.match(yaplParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(yaplParser.INT, 0)

        def STRING_TYPE(self):
            return self.getToken(yaplParser.STRING_TYPE, 0)

        def TYPE_ID(self):
            return self.getToken(yaplParser.TYPE_ID, 0)

        def getRuleIndex(self):
            return yaplParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)




    def type_(self):

        localctx = yaplParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 5905580032) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(yaplParser.TypeContext,0)


        def ID(self):
            return self.getToken(yaplParser.ID, 0)

        def LPAREN(self):
            return self.getToken(yaplParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(yaplParser.RPAREN, 0)

        def block(self):
            return self.getTypedRuleContext(yaplParser.BlockContext,0)


        def parameterList(self):
            return self.getTypedRuleContext(yaplParser.ParameterListContext,0)


        def getRuleIndex(self):
            return yaplParser.RULE_methodDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodDeclaration" ):
                listener.enterMethodDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodDeclaration" ):
                listener.exitMethodDeclaration(self)




    def methodDeclaration(self):

        localctx = yaplParser.MethodDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_methodDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.type_()
            self.state = 68
            self.match(yaplParser.ID)
            self.state = 69
            self.match(yaplParser.LPAREN)
            self.state = 71
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 5905580032) != 0):
                self.state = 70
                self.parameterList()


            self.state = 73
            self.match(yaplParser.RPAREN)
            self.state = 74
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(yaplParser.ParameterContext)
            else:
                return self.getTypedRuleContext(yaplParser.ParameterContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(yaplParser.COMMA)
            else:
                return self.getToken(yaplParser.COMMA, i)

        def getRuleIndex(self):
            return yaplParser.RULE_parameterList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameterList" ):
                listener.enterParameterList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameterList" ):
                listener.exitParameterList(self)




    def parameterList(self):

        localctx = yaplParser.ParameterListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_parameterList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.parameter()
            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==6:
                self.state = 77
                self.match(yaplParser.COMMA)
                self.state = 78
                self.parameter()
                self.state = 83
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(yaplParser.TypeContext,0)


        def ID(self):
            return self.getToken(yaplParser.ID, 0)

        def getRuleIndex(self):
            return yaplParser.RULE_parameter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameter" ):
                listener.enterParameter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameter" ):
                listener.exitParameter(self)




    def parameter(self):

        localctx = yaplParser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_parameter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.type_()
            self.state = 85
            self.match(yaplParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(yaplParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(yaplParser.RBRACE, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(yaplParser.StatementContext)
            else:
                return self.getTypedRuleContext(yaplParser.StatementContext,i)


        def getRuleIndex(self):
            return yaplParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = yaplParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(yaplParser.LBRACE)
            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 8346664962) != 0):
                self.state = 88
                self.statement()
                self.state = 93
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 94
            self.match(yaplParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignmentStatement(self):
            return self.getTypedRuleContext(yaplParser.AssignmentStatementContext,0)


        def variableDeclaration(self):
            return self.getTypedRuleContext(yaplParser.VariableDeclarationContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(yaplParser.IfStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(yaplParser.WhileStatementContext,0)


        def methodCallStatement(self):
            return self.getTypedRuleContext(yaplParser.MethodCallStatementContext,0)


        def returnStatement(self):
            return self.getTypedRuleContext(yaplParser.ReturnStatementContext,0)


        def block(self):
            return self.getTypedRuleContext(yaplParser.BlockContext,0)


        def getRuleIndex(self):
            return yaplParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = yaplParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_statement)
        try:
            self.state = 103
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 96
                self.assignmentStatement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 97
                self.variableDeclaration()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 98
                self.ifStatement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 99
                self.whileStatement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 100
                self.methodCallStatement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 101
                self.returnStatement()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 102
                self.block()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(yaplParser.ID, 0)

        def EQUALS(self):
            return self.getToken(yaplParser.EQUALS, 0)

        def expression(self):
            return self.getTypedRuleContext(yaplParser.ExpressionContext,0)


        def SEMI(self):
            return self.getToken(yaplParser.SEMI, 0)

        def getRuleIndex(self):
            return yaplParser.RULE_assignmentStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignmentStatement" ):
                listener.enterAssignmentStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignmentStatement" ):
                listener.exitAssignmentStatement(self)




    def assignmentStatement(self):

        localctx = yaplParser.AssignmentStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_assignmentStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(yaplParser.ID)
            self.state = 106
            self.match(yaplParser.EQUALS)
            self.state = 107
            self.expression(0)
            self.state = 108
            self.match(yaplParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(yaplParser.TypeContext,0)


        def ID(self):
            return self.getToken(yaplParser.ID, 0)

        def SEMI(self):
            return self.getToken(yaplParser.SEMI, 0)

        def EQUALS(self):
            return self.getToken(yaplParser.EQUALS, 0)

        def expression(self):
            return self.getTypedRuleContext(yaplParser.ExpressionContext,0)


        def getRuleIndex(self):
            return yaplParser.RULE_variableDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableDeclaration" ):
                listener.enterVariableDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableDeclaration" ):
                listener.exitVariableDeclaration(self)




    def variableDeclaration(self):

        localctx = yaplParser.VariableDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_variableDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.type_()
            self.state = 111
            self.match(yaplParser.ID)
            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7:
                self.state = 112
                self.match(yaplParser.EQUALS)
                self.state = 113
                self.expression(0)


            self.state = 116
            self.match(yaplParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(yaplParser.IF, 0)

        def LPAREN(self):
            return self.getToken(yaplParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(yaplParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(yaplParser.RPAREN, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(yaplParser.StatementContext)
            else:
                return self.getTypedRuleContext(yaplParser.StatementContext,i)


        def FI(self):
            return self.getToken(yaplParser.FI, 0)

        def ELSE(self):
            return self.getToken(yaplParser.ELSE, 0)

        def getRuleIndex(self):
            return yaplParser.RULE_ifStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)




    def ifStatement(self):

        localctx = yaplParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_ifStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(yaplParser.IF)
            self.state = 119
            self.match(yaplParser.LPAREN)
            self.state = 120
            self.expression(0)
            self.state = 121
            self.match(yaplParser.RPAREN)
            self.state = 122
            self.statement()
            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==21:
                self.state = 123
                self.match(yaplParser.ELSE)
                self.state = 124
                self.statement()


            self.state = 127
            self.match(yaplParser.FI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(yaplParser.WHILE, 0)

        def LPAREN(self):
            return self.getToken(yaplParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(yaplParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(yaplParser.RPAREN, 0)

        def statement(self):
            return self.getTypedRuleContext(yaplParser.StatementContext,0)


        def getRuleIndex(self):
            return yaplParser.RULE_whileStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStatement" ):
                listener.enterWhileStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStatement" ):
                listener.exitWhileStatement(self)




    def whileStatement(self):

        localctx = yaplParser.WhileStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_whileStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(yaplParser.WHILE)
            self.state = 130
            self.match(yaplParser.LPAREN)
            self.state = 131
            self.expression(0)
            self.state = 132
            self.match(yaplParser.RPAREN)
            self.state = 133
            self.statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodCallStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(yaplParser.ID, 0)

        def LPAREN(self):
            return self.getToken(yaplParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(yaplParser.RPAREN, 0)

        def SEMI(self):
            return self.getToken(yaplParser.SEMI, 0)

        def expressionList(self):
            return self.getTypedRuleContext(yaplParser.ExpressionListContext,0)


        def getRuleIndex(self):
            return yaplParser.RULE_methodCallStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodCallStatement" ):
                listener.enterMethodCallStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodCallStatement" ):
                listener.exitMethodCallStatement(self)




    def methodCallStatement(self):

        localctx = yaplParser.MethodCallStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_methodCallStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(yaplParser.ID)
            self.state = 136
            self.match(yaplParser.LPAREN)
            self.state = 138
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 28051587592) != 0):
                self.state = 137
                self.expressionList()


            self.state = 140
            self.match(yaplParser.RPAREN)
            self.state = 141
            self.match(yaplParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(yaplParser.RETURN, 0)

        def SEMI(self):
            return self.getToken(yaplParser.SEMI, 0)

        def expression(self):
            return self.getTypedRuleContext(yaplParser.ExpressionContext,0)


        def getRuleIndex(self):
            return yaplParser.RULE_returnStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnStatement" ):
                listener.enterReturnStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnStatement" ):
                listener.exitReturnStatement(self)




    def returnStatement(self):
